[package]
name = "github-fork-notifier-airtable"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
github-flows = "0.5.1"
slack-flows = "0.2.6"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
anyhow = "1"
serde_json = "1"
airtable-flows = "0.1.9"
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
